# insight-engine

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  run_benchmarks.py
demo_data/: ecommerce.csv  generate_demo_data.py  hr_attrition.csv  marketing_touchpoints.csv  time_series_sales.csv
docs/adr/: 0001-auto-type-detection.md  0002-four-attribution-models.md  0003-shap-explainability.md
insight_engine/: __init__.py  advanced_anomaly.py  anomaly_detector.py  attribution.py  cleaner.py  clustering.py  dashboard_generator.py  data_quality.py  dimensionality.py  feature_lab.py  forecaster.py  hypertuner.py  kpi_framework.py  model_observatory.py  predictor.py  profiler.py  regression_diagnostics.py  report_generator.py  statistical_tests.py
tests/: test_advanced_anomaly.py  test_advanced_regression_diagnostics.py  test_anomaly_detector.py  test_attribution.py  test_cleaner.py  test_clustering.py  test_dashboard_generator.py  test_data_quality.py  test_dimensionality.py  test_feature_lab.py  test_forecaster.py  test_hypertuner.py  test_kpi_framework.py  test_model_observatory.py  test_predictor.py  test_profiler.py  test_regression_diagnostics.py  test_report_generator.py  test_statistical_tests.py
